2008-11-26  Al Riddoch  <alriddoch@googlemail.com>

	* Atlas/Codecs/Makefile.am, Atlas/Filters/Makefile.am,
	  Atlas/Message/Makefile.am, Atlas/Net/Makefile.am,
	  Atlas/Objects/Makefile.am: Make the libraries link to the others
	  they depend on so using them is easier and --as-needed can
	  be used.

	* Atlas/Makefile.am: Change the subdirectory build order so that
	  the top level builds first.

2008-06-01  Alexey Torkhov  <atorkhov@gmail.com>

	* Atlas/Filter.cpp: Add <cstring> include as required by GCC 4.3.

	* tools/atlas_convert.cpp: Add <cstdlib> include as required by
	  GCC 4.3.

2007-09-24  Al Riddoch  <alriddoch@zepler.org>

	* benchmark/Objects2_Move.cpp, benchmark/Objects3_Move.cpp:
	  Remove a nasty C style cast that was causing warnings.

2007-09-24  Al Riddoch  <alriddoch@zepler.org>

	* tests/Objects/objects2.cpp: Remove a nasty C style cast that was
	  causing warnings.

2007-09-22  Al Riddoch  <alriddoch@zepler.org>

	* tests/Objects/objects1.cpp: Remove a nasty C style cast that was
	  causing warnings.

2007-09-22  Al Riddoch  <alriddoch@zepler.org>

	* tests/Objects/objects1.cpp: Remove a nasty C style cast that was
	  causing warnings.

2007-09-02  Al Riddoch  <alriddoch@zepler.org>

	* Makefile.am, configure.ac: Remove the debian directory from
	  distribution.

2007-07-16  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac, Makefile.am: Add experimental debian packaging stuff.

2007-04-25  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/BaseObject.h: Add accessor for attribute flags, to
	  allow broader testing.

2007-04-01  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Codecs/Bach.cpp, Atlas/Codecs/Packed.cpp, Atlas/Codecs/XML.cpp:
	  Add C stdlib include to get atol. Not previously requires as some
	  compilers included this inside the STL headers.

	* Atlas/Net/Stream.cpp, Atlas/Codecs/Bach.cpp,
	  Atlas/Codecs/Packed.cpp, Atlas/Codecs/XML.cpp:
	  Re-code the parsing state machines for negotiation and codecs