@@ -2,6 +2,13 @@
 
 	* Atlas/Codecs/Makefile.am, Atlas/Filters/Makefile.am,
 	  Atlas/Message/Makefile.am, Atlas/Net/Makefile.am,
+	  Atlas/Objects/Makefile.am: Refer to other libraries via
+	  top_builddir rather than using ..
+
+2008-11-26  Al Riddoch  <alriddoch@googlemail.com>
+
+	* Atlas/Codecs/Makefile.am, Atlas/Filters/Makefile.am,
+	  Atlas/Message/Makefile.am, Atlas/Net/Makefile.am,
 	  Atlas/Objects/Makefile.am: Make the libraries link to the others
 	  they depend on so using them is easier and --as-needed can
 	  be used.
